# SensoriumDecoding

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
notebooks/: EdgeIndexCreation.ipynb  linear_decoding.ipynb  sensorium_eda.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: linear_decoding-checkpoint.ipynb  sensorium_eda-checkpoint.ipynb
runs/DNN/: args.yaml
runs/ridge_reg/: args.yaml
src/: train_plots.py
src/models/: MLP_core.py  VGG_core.py  behaviourMLP.py  decoderCore.py  encoding_ridge.py  model.py  mouseGAT.py  mouseGCN.py  mouseGraphConv.py  mouseMLP.py  pixel_distributions.py  plots.py  plots2.py  ridge_reg.py  test.py  train.py  trainGCN.py
src/models/linear/: best_decoding_m.py  decoding.py  decoding_behavioural.py  encoding_ridge.py  encoding_ridge_behaviour.py  linear_decoding_analysis.py
src/utils/: data.py  losses.py  metrics.py  utils.py
