[tool.poetry]
name = "sensoriumdecoding"
version = "0.1.0"
description = ""
authors = ["Sachin Loecher <s2086929@ed.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nnfabrik = "^0.2.1"
numpy = "^1.26.3"
pandas = "^2.1.4"
seaborn = "^0.13.1"
matplotlib = "^3.8.2"
datajoint = "^0.14.1"
gitpython = "^3.1.41"
asttokens = "^2.4.1"
crypto = "^1.4.1"
ruamel-yaml = "^0.18.5"
wandb = "^0.16.2"
scikit-learn = "^1.4.0"
torch = {version = "2.0", source="torch"}
scipy = "^1.12.0"
ipykernel = "6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"